# nonnu

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: db.rs  lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token_kind.rs
crates/nonnu/: Cargo.toml
crates/nonnu-cli/: Cargo.toml
crates/nonnu-cli/src/: main.rs
crates/nonnu/src/: binding_def.rs  env.rs  func_def.rs  lexer.rs  lib.rs  main.rs  parser.rs  stmt.rs  syntax.rs  utils.rs  val.rs
crates/nonnu/src/expr/: binding_usage.rs  block.rs  func_call.rs  mod.rs
crates/nonnu/src/parser/: event.rs  expr.rs  marker.rs  sink.rs  source.rs
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  grammar.rs  lib.rs  parser.rs  sink.rs  source.rs
crates/parser/src/grammar/: expr.rs  stmt.rs
crates/parser/src/parser/: marker.rs  parse_error.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
fuzz/: .gitignore  Cargo.toml
lexer/: invalid
src/: ast.rs  binding_def.rs  binding_usage.rs  codegen.rs  env.rs  expr.rs  hir.rs  indexer.rs  lexer.rs  lib.rs  parser.rs  resolver.rs  sema.rs  testing.rs  utils.rs
src/expr/: binding_usage.rs  mod.rs
tests/parser/: expressions  procs  statements  structs
tests/resolver/: simple_procs  structs
tests/sema/: expressions
